--- a/client/css/gameInterface/gameNotifications.css
+++ b/client/css/gameInterface/gameNotifications.css
@@ -41,8 +41,8 @@
   font-family: 'Roboto Condensed', sans-serif;
   opacity: 0.9;
   transition-duration: 0.1s;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  /* backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px); */
   display: flex;
 }
 
@@ -60,8 +60,8 @@
   font-family: 'Roboto Condensed', sans-serif;
   opacity: 0.9;
   transition-duration: 0.1s;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  /* backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px); */
   display: flex;
 }
 
