--- a/client/css/gameInterface/city.css
+++ b/client/css/gameInterface/city.css
@@ -9,90 +9,207 @@
   display: flex;
 }
 
-#cityCard {
-  width: 320px;
-  height: 320px;
-  overflow: hidden;
-  display: none;
+.cityCard{
+  width: 420px;
+  height: 390px;
+  background-color: #b6b6b6;
   margin: auto;
-}
-
-.cityCard-title {
-  width: 100%;
-  font-weight: bold;
-  font-size: 50px;
-  margin-bottom: 8px;
-  text-align: right;
-}
-
-.cityCard-list {
-  background-color: #EAEAEA;
-  color: #EAEAEA;
-  overflow-y: scroll;
-  width: 100%;
-  height: 220px;
-}
-
-.cityCard-list-item {
-  width: 100%;
-  height: 45px;
-  margin-top: 8px;
-  margin-bottom: 24px;
-  display: flex;
-}
-
-.cityCard-resource-image {
-  width: 45px;
-  height: 45px;
-  padding: 4px;
-}
-
-.cityCard-resource-image-name {
-  color: white;
-  font-size: 9px;
-}
-
-.cityCard-resource-info {
-  width: 235px;
-  height: 45px;
-}
-
-.cityCard-resource-info-price {
-  height: 21px;
-  width: 100%;
-  font-weight: 200;
-  padding-left: 4px;
-  color: #303030;
-}
-
-.cityCard-resource-info-holes {
-  height: 24px;
-  width: 100%;
-  display: flex;
-}
-
-.cityCard-resource-info-holes-price {
-  width: 100%;
-  font-size: 6px;
-  text-align: right;
-  color: #707070
-}
-
-#cityPriceSection {
-  display: none;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
   overflow: hidden;
-  z-index: 3;
-  pointer-events: none;
+  border-radius: 10px;
+  font-family: 'Roboto';
+  box-shadow: 0px 0px 10px black;
+
+
+}
+.cityCard_header{
+  width: 100%;
+}
+.cityCard_header_bg{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  padding: 10px;
+  padding-bottom: 40px;
+  background-size: cover;
+  background-image: url(../img/cityCards/city.png);
+
 }
 
-.cityPriceNotification {
-  position: absolute;
-  color: #74ff6c;
+.cityCard_header-header{
+  font-size: 10px;
+  text-transform: uppercase;
+  font-family: 'Roboto Condensed';
+  color: white;
+  text-shadow: 0px 0px 10px black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.cityCard_header-header-span{
+  font-weight: bold;
+}
+
+.cityCard_header-title{
+  font-family: 'Roboto Condensed';
+  font-size: 40px;
+  font-weight: bold;
+  color: white;
   text-align: center;
-  font-size: 1em;
-  font-family: 'Roboto', sans-serif;
-  text-shadow: 0px 0px 1px black;
+  text-shadow: 0px 0px 10px black;
+}
+.cityCard_header-balance{
+  font-family: 'Roboto Condensed';
+  font-size: 20px;
+  text-align: center;
+
+  font-weight: bold;
+  color: white;
+  text-shadow: 0px 0px 10px black;
+
+}
+/* background-color: #FAF9F8; */
+
+.cityCard_body{
+  width: 100%;
+  position: relative;
+  top: -40px;
+  padding-top: 5px;
+  filter: drop-shadow(0px 0px 10px black);
+}
+.cityCard_body-header{
+  width: 100%;
+  display: flex;
+  height: 35px;
+}
+.cityCard_body-header-item{
+  height: 35px;
+  width: 100px;
+  background-color: #bebebe;
+  border-radius: 15px 15px 0px 0px;
+  padding: 5px;
+  font-family: 'Roboto Condensed';
+  font-size: 12px;
+  color: #303030;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cityCard_body-header-item-selected{
+  background-color: #FAF9F8;
+  box-shadow: 0px 0px 10px #000000;
+  z-index: 1;
+}
+
+.cityCard_body-body{
+  position: relative;
+  width: 100%;
+  height: 260px;
+  padding: 10px;
+  z-index: 2;
+  background-color: #FAF9F8;
+}
+.cityCard_body_list{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cityCard_body_list-item{
+  width: 50px;
+  margin:5px;
+  height: 230px;
+
+}
+.cityCard_body_list-item-price{
+  font-family: 'Roboto Condensed';
+  font-size: 12px;
+  color: #303030;
+  text-align: center;
+  margin-bottom: 5px;
+}
+.cityCard_body_list-item-progressBar{
+  width: 28px;
+  margin: auto;
+  /* height: 160 + 28px; */
+  height: 188px;
+  background-color: #E4E4E4;
+  border-radius: 8px;
+  box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.25);
+  position: relative;
+}
+.cityCard_body_list-item-progressBar-start{
+  width: 28px;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cityCard_body_list-item-progressBar-start-icon{
+  width: 20px;
+  height: 20px;
+  background-size: cover;
+}
+.cityCard_body_list-item-progressBar-division{
+  width: 100%;
+  height: 8px;
+  border-top: 1px solid #8a8686;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #606060;
+  font-size: 7px;
+}
+.cityCard_body_list-item-progressBar-product{
+  width: 28px;
+  height: 28px;
+  border-radius: 8px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  background-color: #FAF9F8;
+  border: 1px solid #303030;
+  margin-right: 2px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top:16px;
+}
+.cityCard_body_list-item-progressBar-product-icon{
+  width: 20px;
+  height: 20px;
+  background-size: cover;
+}
+.cityCard_body_list-item-speed{
+  font-family: 'Roboto Condensed';
+  width: 100%;
+  height: 20px;
+  font-size: 10px;
+  color: #303030;
+  text-align: center;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  background-color: #E4E4E4;
+  border-radius: 8px;
+  box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.25);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cityCard_body_list-item-speed-gap{
+  font-family: 'Roboto Condensed';
+  width: 100%;
+  height: 20px;
+  font-size: 10px;
+  color: #303030;
+  text-align: center;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  background-color: #A3D735;
+  border-radius: 8px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
