--- a/client/css/gameInterface/factory.css
+++ b/client/css/gameInterface/factory.css
@@ -50,7 +50,7 @@
   height: 34%;
   padding: 10px;
   background-size: 100%;
-  filter: contrast(1.3) brightness(1.3);
+  /* filter: contrast(1.3) brightness(1.3); */
 }
 
 .factory_header_bg-oilWell {
