--- a/client/css/gameInterface/ceilMenu.css
+++ b/client/css/gameInterface/ceilMenu.css
@@ -167,7 +167,7 @@
   left: 50%;
   bottom: 5%;
   transform: translate(-50%);
-  filter: drop-shadow(5px 5px 10px rgba(48, 48, 48,0.5));
+  /* filter: drop-shadow(5px 5px 10px rgba(48, 48, 48,0.5)); */
 
 }
 .sectorMenu_menu-header{
@@ -187,6 +187,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+    box-shadow: 0px 0px 5px rgba(48, 48, 48,0.8);
   }
   .sectorMenu_menu-header-button-icon{
     width: 40px;
@@ -213,12 +214,14 @@
     margin-left: 10px;
     position: relative;
     overflow: hidden;
+    box-shadow: 0px 0px 5px rgba(48, 48, 48,0.8);
+
   }
   .sectorMenu_menu-card-header{
     width: 100%;
     height: 25px;
     font-family: 'Roboto Condensed';
-    font-size: 9px;
+    font-size: 7px;
     letter-spacing: 0em;
     color: #303030;
     margin-bottom: -25px;
@@ -239,6 +242,7 @@
     height: 150px;
     position: relative;
     top:-100px;
+    font-weight: bold;
   }
   .sectorMenu_menu-card-description-gradient{
     width: 100%;
@@ -252,6 +256,7 @@
     padding-left: 5px;
     display: flex;
     align-items: center;
+    margin-bottom: 5px;
   }
   .sectorMenu_menu-card-description-product{
     width: 20px;
@@ -263,16 +268,17 @@
     width: 100%;
     height: 20px;
     font-family: 'Roboto Condensed';
-    font-size: 10px;
+    font-size: 12px;
     letter-spacing: -0.05em;
     padding: 0px 5px;
-    color:#303030;
-    margin-bottom: 10px;
+    color: #303030;
+    margin-bottom: 5px;
+    line-height: 80%;
   }
   .sectorMenu_menu-card-description-button{
-    width: 80%;
+    width: 70%;
     margin: auto;
-    height: 23px;
+    height: 25px;
     box-shadow: 0px 0px 5px rgba(48, 48, 48,0.5);
     display: flex;
     align-items: center;
@@ -281,8 +287,9 @@
     border-radius: 20px;
   }
   .sectorMenu_menu-card-description-button-nonActive{
-    width: 80%;
-    height: 23px;
+    width: 70%;
+    height: 25px;
+
 
     margin: auto;
     display: flex;
@@ -296,17 +303,14 @@
   .sectorMenu_menu-card-description-button:hover{
     background-color: #D7355C;
     color: white;
-  };
-
-/* #sectorMenu {
-  display: none;
-  z-index: 2;
-  margin: auto;
-  width: 400px;
-  height: 255px;
-  -webkit-transform: translateX(25%) rotateX(5deg);
-  transform: translateX(25%) rotateX(5deg);
-}
+  }
+#sectorMenu {
+   display: none;
+   z-index: 2;
+   width: 100vw;
+   height: 100vh;
+ }
+/*
 .sectorMenu_Left {
   width: 200px;
   height: 255px;
