--- a/client/css/gameInterface/ceilMenu.css
+++ b/client/css/gameInterface/ceilMenu.css
@@ -310,6 +310,92 @@
    width: 100vw;
    height: 100vh;
  }
+
+
+
+ .sectorMenu_build{
+   pointer-events: auto;
+    width: 340px;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    height: 30px;
+    display: flex;
+    align-items: center;
+
+    font-family: 'Roboto Condensed';
+    color: #303030;
+    letter-spacing: -0.05em;
+
+    justify-content: space-around;
+ }
+ .sectorMenu_build_card{
+   width: 130px;
+   background-color: #FAF9F8;
+   padding: 10px;
+   border-radius: 10px;
+   box-shadow: 0px 0px 10px rgba(48, 48, 48,0.5);
+   flex: 0 0 auto;
+ }
+ .sectorMenu_build_card-title{
+   font-family: 'Roboto Condensed';
+   color: #303030;
+   font-size: 13px;
+   font-weight: bold;
+   text-align: center;
+   letter-spacing: -0.05em;
+
+ }
+ .sectorMenu_build_card-price{
+   font-family: 'Roboto Condensed';
+   color: #303030;
+   font-size: 13px;
+   font-weight: bold;
+   text-align: center;
+   letter-spacing: -0.05em;
+ }
+ .sectorMenu_build_card-image{
+   width: 110px;
+   height: 110px;
+   margin: auto;
+   background-size: contain;
+   margin-top: -10px;
+ }
+ .sectorMenu_build_card-productsList{
+   width: 100%;
+ }
+ .sectorMenu_build_card-productsList-item{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 100%;
+   height: 20px;
+   transform: scale(1.1);
+ }
+
+
+ .sectorMenu_build_button{
+   width: 80px;
+   border-radius: 30px;
+   height: 30px;
+   background-color: #FAF9F8;
+   box-shadow: 0px 0px 10px rgba(48, 48, 48,0.5);
+   margin: 0px 10px;
+   font-size: 12px;
+   font-weight: bold;
+   color: #303030;
+   font-size: 12px;
+   text-transform: uppercase;
+   letter-spacing: -0.05em;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+ }
+ .sectorMenu_build_button:hover{
+   background-color: #D7355C;
+   color: white;
+ }
 /*
 .sectorMenu_Left {
   width: 200px;
