--- a/client/css/gameInterface/factory.css
+++ b/client/css/gameInterface/factory.css
@@ -48,7 +48,7 @@
 .factory_header {
   width: 100%;
   height: 34%;
-  padding: 10px;
+  padding: 8px;
   background-size: 100%;
   /* filter: contrast(1.3) brightness(1.3); */
 }
@@ -67,14 +67,14 @@
 }
 
 .factory_header_header {
-  font-size: 10px;
+  font-size: 8px;
   text-transform: uppercase;
   font-family: 'Roboto Condensed';
   color: white;
   text-shadow: 0px 0px 10px black;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .factory_header_header-span {
@@ -224,6 +224,7 @@
   color: white;
   font-family: 'Roboto';
   font-size: 12px;
+  font-weight: bold;
 }
 
 .factory_body_footer {
