--- a/client/css/gameInterface/turn.css
+++ b/client/css/gameInterface/turn.css
@@ -14,27 +14,37 @@
   z-index: 1;
 }
 
-#turnInfo{
-  position: fixed;
-  bottom:10%;
-  right: 8%;
-  transform: translateX(-50%);
-}
-
-#turnButton{
-  position: fixed;
-  width: 10vw;
-  height: 10vh;
-  font-size: 0.9em;
-  font-weight: 400;
-  bottom:15%;
-  right: 10%;
-
-
-  height: 50px;
-
-
-
+.turn-container{
+  width: 300px;
+  height: 100px;
   pointer-events: auto;
-  display: none;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Roboto Condensed';
 }
+.turn-button{
+  width: 150px;
+  height: 50px;
+  font-size: 15px;
+  background-color: #D7355C;
+  color: white;
+  
+  font-weight: bold;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  margin-bottom: 10px;
+}
+ .turn-info{
+   font-size: 20px;
+   color:white;
+   font-weight: bold;
+   text-transform: uppercase;
+   text-shadow: 0px 0px 1px black;
+ }
