--- a/client/css/gameInterface/tutorial.css
+++ b/client/css/gameInterface/tutorial.css
@@ -123,6 +123,31 @@
 
 }
 .tutorialSection-important{
-  color:#D7355C;
-  font-weight:bold;
+  background-color: #D7355C;
+  border-radius: 10px;
+  padding: 0px 5px;
+  color: white;
+  font-weight: bold;;
+}
+
+.tutorialSection-imageDiv{
+  width: 100%;
+  height: 55px;
+  background-size: cover;
+}
+
+.tutorialSection-image-controls_1{
+  background-image: url(../img/tutorial/controls_1.png);
+}
+.tutorialSection-image-controls_2{
+  background-image: url(../img/tutorial/controls_2.png);
+}
+.tutorialSection-image-controls_3{
+  background-image: url(../img/tutorial/controls_3.png);
+}
+.tutorialSection-image-controls_4{
+  background-image: url(../img/tutorial/controls_4.png);
+}
+.tutorialSection-image-controls_5{
+  background-image: url(../img/tutorial/controls_5.png);
 }
